# workshops

./: README.md
ai-agents-of-change/: README.md  creating-ai-agent-with-openserv.md  requirements.txt  workshop-about.md  workshop-agenda.md
ai-agents-of-change/exercises/ai-agent-tutorial/: .env.example  AI_RECRUITER_README.md  __init__.py  api.py  do_task.py  pyproject.toml  recruiter-agent.md  requirements.txt
ai-agents-of-change/exercises/ai-agent-tutorial/examples/: README.md  basic_agent.py
ai-agents-of-change/exercises/ai-agent-tutorial/src/: capability.py  client.py
ai-agents-of-change/resources/: 01-introduction.md  02-what-is-ai-agent.md  04-multi-agents.md  05-creating-ai-agent-with-openserv.md  08-ethics-introduction.md  ai-agent-design.md  ethics-canvas.md  mental-model-shift.md  workshop-timeline.md
ai-agents-of-change/src/: ai_recruiter.py  main.py  recruiter2.py  respond_chat_message.py
